--- a/views/compiler.ejs
+++ b/views/compiler.ejs
@@ -59,7 +59,7 @@
                     break;
             }
         })
-
+        // getting code
 
         document.querySelector("#getCode").addEventListener("click", () => {
             var code = editor.getValue();
