--- a/views/question.ejs
+++ b/views/question.ejs
@@ -38,7 +38,7 @@
                     <ul>
                         <li>Visit your feed</li>
                         <li>Follow 20 or more topics</li>
-                        <li>Find your frinds on explorelf</li>
+                        <li>Find your frinds on KodeBooK</li>
                         <li>Upvote 2 or more good answers</li>
                         <li>Ask your first question</li>
                         <li>Add 3 credentials</li>
