--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Explorelf</title>
+    <title>KodeBooK</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     
@@ -24,7 +24,7 @@
         <!-- <div class="nav "> -->
           <ul class="nav navbar-nav ">
             <div class="navbar-header">
-              <a class="navbar-brand" href="/" style="padding: 0;"><img class="logo" src="/logo.png" alt=""></a>
+              <a class="navbar-brand" href="/" style="padding: 0;"><img class="logo" src="/logo1.png" alt=""></a>
             </div>
               <li><a href="/">Home</a></li>
               <!-- <li><a href="/myQuestion">My Questions</a></li>
